fix(ResourceList): alignment issue

--- a/packages/components/src/ResourceList/Resource/Resource.module.scss
+++ b/packages/components/src/ResourceList/Resource/Resource.module.scss
@@ -106,8 +106,8 @@
 			padding-left: $padding-small;
 			margin-bottom: 0;
 
-			div:first-child {
-				margin-bottom: $padding-small;
+			> div {
+				margin-top: $padding-smaller;
 			}
 
 			div {
